--- a/app/src/main/res/layout/fragment_door_password_setting.xml
+++ b/app/src/main/res/layout/fragment_door_password_setting.xml
@@ -1,6 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:ct_background_color="@color/color_0ba8cf"
+        app:ct_enable_shadow="false"
+        app:ct_enable_theme="true"
+        app:ct_fit_system_window="true"
+        app:ct_icon="@drawable/nav_icon_back_white"
+        app:ct_icon_right="@drawable/icon_finish_selector"
+        app:ct_left_title="语言包:修改开门密码"
+        app:ct_left_title_color="@color/color_white"
+        app:ct_title_color="@color/color_black" />
+
+    <EditText
+        android:id="@+id/password1"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y54"
+        android:layout_marginEnd="@dimen/y20"
+        android:layout_marginStart="@dimen/y20"
+        android:hint="@string/Tap3_ChangePassword"
+        android:inputType="textPassword"
+        android:textSize="@dimen/sp16" />
+
+    <EditText
+        android:id="@+id/password2"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y54"
+        android:layout_marginEnd="@dimen/y20"
+        android:layout_marginStart="@dimen/y20"
+        android:hint="@string/NEW_PWD"
+        android:inputType="textPassword"
+        android:textSize="@dimen/sp16" />
+</LinearLayout>
