--- a/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/y57"
+        android:layout_alignTop="@+id/imgv_bell_live_hang_up"
+        android:layout_alignBottom="@+id/imgv_bell_live_hang_up"
         android:src="@drawable/icon_port_capture_selector" />
 
     <ImageView
@@ -27,7 +29,6 @@
         android:id="@+id/imgv_bell_live_hang_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imgv_bell_live_capture"
         android:layout_centerHorizontal="true"
         android:src="@drawable/doorbell_btn_hang_up" />
 
@@ -35,6 +36,8 @@
         android:id="@+id/imgv_bell_live_speaker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imgv_bell_live_hang_up"
+        android:layout_alignBottom="@+id/imgv_bell_live_hang_up"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/y57"
         android:src="@drawable/icon_port_voice_on_selector" />
