AI 摄像机隐藏消息

--- a/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
@@ -9,10 +9,10 @@
         android:id="@+id/imgv_bell_live_capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imgv_bell_live_hang_up"
+        android:layout_alignTop="@+id/imgv_bell_live_hang_up"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/y57"
-        android:layout_alignTop="@+id/imgv_bell_live_hang_up"
-        android:layout_alignBottom="@+id/imgv_bell_live_hang_up"
         android:src="@drawable/icon_port_capture_selector" />
 
     <ImageView
@@ -21,14 +21,15 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_vertical"
-        android:visibility="gone"
         android:layout_marginBottom="@dimen/y27"
-        android:src="@drawable/icon_door_look_selector" />
+        android:src="@drawable/icon_door_look_selector"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/imgv_bell_live_hang_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/imgv_bell_door_lock"
         android:layout_centerHorizontal="true"
         android:src="@drawable/doorbell_btn_hang_up" />
 
@@ -36,9 +37,9 @@
         android:id="@+id/imgv_bell_live_speaker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imgv_bell_live_hang_up"
         android:layout_alignBottom="@+id/imgv_bell_live_hang_up"
         android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/imgv_bell_live_hang_up"
         android:layout_marginEnd="@dimen/y57"
         android:src="@drawable/icon_port_voice_on_selector" />
 
