--- a/app/src/main/res/layout/fragment_door_password_setting.xml
+++ b/app/src/main/res/layout/fragment_door_password_setting.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_white"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
@@ -16,27 +19,28 @@
         app:ct_fit_system_window="true"
         app:ct_icon="@drawable/nav_icon_back_white"
         app:ct_icon_right="@drawable/icon_finish_selector"
-        app:ct_left_title="语言包:修改开门密码"
+        app:ct_left_title="@string/MODIFY_DOOR_PSW"
         app:ct_left_title_color="@color/color_white"
         app:ct_title_color="@color/color_black" />
 
-    <EditText
+    <com.cylan.jiafeigou.widget.CustomEditText
         android:id="@+id/password1"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y54"
-        android:layout_marginEnd="@dimen/y20"
-        android:layout_marginStart="@dimen/y20"
+        android:layout_height="wrap_content"
         android:hint="@string/Tap3_ChangePassword"
-        android:inputType="textPassword"
+        android:inputType="text"
+        android:maxLength="16"
         android:textSize="@dimen/sp16" />
 
-    <EditText
+    <com.cylan.jiafeigou.widget.CustomEditText
         android:id="@+id/password2"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y54"
-        android:layout_marginEnd="@dimen/y20"
-        android:layout_marginStart="@dimen/y20"
+        android:layout_height="wrap_content"
         android:hint="@string/NEW_PWD"
-        android:inputType="textPassword"
+        android:inputType="text"
+        android:maxLength="16"
         android:textSize="@dimen/sp16" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
