--- a/app/src/main/res/layout/activity_bell_live.xml
+++ b/app/src/main/res/layout/activity_bell_live.xml
@@ -30,7 +30,7 @@
         android:id="@+id/act_bell_live_video_view_container"
         android:layout_width="0dp"
         android:layout_height="@dimen/y288"
-
+        android:background="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
