--- a/app/src/main/res/layout/fragment_safe_protection.xml
+++ b/app/src/main/res/layout/fragment_safe_protection.xml
@@ -77,6 +77,14 @@
                 hunt:sv_title="@string/SECURE_SENSITIVITY"
                 hunt:sv_v_divider="true" />
 
+
+            <com.cylan.jiafeigou.widget.SettingItemView0
+                android:id="@+id/fLayout_protection_warn_effect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                hunt:sv_title="@string/SOUNDS"
+                hunt:sv_v_divider="true" />
+
             <com.cylan.jiafeigou.widget.SettingItemView1
                 android:id="@+id/sw_infrared_strengthen"
                 android:layout_width="match_parent"
@@ -84,22 +92,31 @@
                 hunt:sv_title="@string/INFRARED_IDENTIFY_SET"
                 hunt:sv_v_divider="true" />
 
-            <com.cylan.jiafeigou.widget.SettingItemView0
-                android:id="@+id/sw_monitoring_area"
+            <RelativeLayout
+                android:id="@+id/rl_monitoring_area_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                hunt:sv_sub_title="默认"
-                hunt:sv_switch_visibility="false"
-                hunt:sv_title="语言包:区域侦测设置"
-                hunt:sv_v_divider="true" />
+                android:layout_height="wrap_content">
 
-            <com.cylan.jiafeigou.widget.SettingItemView0
-                android:id="@+id/fLayout_protection_warn_effect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                hunt:sv_title="@string/SOUNDS"
-                hunt:sv_v_divider="false" />
+                <com.cylan.jiafeigou.widget.SettingItemView0
+                    android:id="@+id/sw_monitoring_area"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    hunt:sv_sub_title="@string/DETECTION_AREA_DEFAULT"
+                    hunt:sv_switch_visibility="false"
+                    hunt:sv_title="@string/DETECTION_AREA"
+                    hunt:sv_v_divider="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/sw_monitoring_area"
+                    android:paddingEnd="@dimen/y20"
+                    android:paddingStart="@dimen/y20"
+                    android:paddingTop="@dimen/y8"
+                    android:text="@string/DETECTION_AREA_DESCRI"
+                    android:textColor="@color/color_888888"
+                    android:textSize="@dimen/sp13" />
+            </RelativeLayout>
 
             <FrameLayout
                 android:id="@+id/fl_protection_title"
