--- a/app/src/main/res/layout/fragment_monitor_area_setting.xml
+++ b/app/src/main/res/layout/fragment_monitor_area_setting.xml
@@ -1,41 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000"
+    android:clickable="true"
+    android:focusable="true">
 
-    <TextView
+    <com.cylan.jiafeigou.widget.crop.CropLayout
+        android:id="@+id/effect_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <ImageView
+            android:id="@+id/monitor_picture"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/default_diagram_mask" />
+
+        <View
+            android:id="@+id/cover_layer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/monitor_picture"
+            android:layout_alignEnd="@+id/monitor_picture"
+            android:layout_alignStart="@+id/monitor_picture"
+            android:layout_alignTop="@+id/monitor_picture"
+            android:alpha="0.4"
+            android:background="@color/color_black" />
+
+        <com.cylan.jiafeigou.widget.crop.EffectLayout
+            android:id="@+id/effect_view"
+            android:layout_width="@dimen/y206"
+            android:layout_height="@dimen/y136"
+            android:layout_centerInParent="true"
+            android:minHeight="@dimen/y80"
+            android:minWidth="@dimen/y80"
+            android:visibility="invisible">
+
+            <TextView
+                android:id="@+id/effect_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/y20"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:text="@string/DETECTION_AREA_GUIDE"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/sp15" />
+        </com.cylan.jiafeigou.widget.crop.EffectLayout>
+
+        <com.cylan.jiafeigou.widget.SimpleProgressBar
+            android:id="@+id/load_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:padding="@dimen/x5"
+            android:visibility="gone"
+            app:progress_init_loading="false"
+            app:progress_point_radius="@dimen/x2"
+            app:progress_radius="@dimen/x20"
+            app:progress_stroke_color="@color/color_white"
+            app:progress_swipe_degree="310" />
+
+    </com.cylan.jiafeigou.widget.crop.CropLayout>
+
+    <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="@dimen/y8"
+        android:layout_marginTop="@dimen/y8"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="@dimen/y10"
+        android:src="@drawable/nav_icon_back_selector" />
+
 
     <TextView
         android:id="@+id/finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="@dimen/y8"
+        android:layout_marginTop="@dimen/y8"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="@dimen/y10"
         android:text="@string/FINISHED"
         android:textColor="#FFFFFF"
-        android:textSize="@dimen/sp15"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/icon_default_area"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="@dimen/sp15" />
 
     <TextView
+        android:id="@+id/monitor_toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="@dimen/y20"
         android:layout_marginEnd="@dimen/y20"
         android:background="@drawable/icon_default_area"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:visibility="visible" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
