--- a/app/src/main/res/layout/fragment_monitor_area_setting.xml
+++ b/app/src/main/res/layout/fragment_monitor_area_setting.xml
@@ -7,37 +7,45 @@
     android:clickable="true"
     android:focusable="true">
 
+    <ImageView
+        android:id="@+id/monitor_picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:adjustViewBounds="true"
+        android:clickable="false"
+        android:focusable="false"
+        android:scaleType="fitXY"
+        android:src="@drawable/default_diagram_mask" />
+
+    <View
+        android:id="@+id/cover_layer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/monitor_picture"
+        android:layout_alignEnd="@+id/monitor_picture"
+        android:layout_alignStart="@+id/monitor_picture"
+        android:layout_alignTop="@+id/monitor_picture"
+        android:alpha="0.4"
+        android:background="@color/color_black"
+        android:clickable="false"
+        android:focusable="false" />
+
     <com.cylan.jiafeigou.widget.crop.CropLayout
         android:id="@+id/effect_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/monitor_picture"
+        android:layout_alignEnd="@+id/monitor_picture"
+        android:layout_alignStart="@+id/monitor_picture"
+        android:layout_alignTop="@id/monitor_picture"
         android:layout_centerInParent="true">
-
-        <ImageView
-            android:id="@+id/monitor_picture"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/default_diagram_mask" />
-
-        <View
-            android:id="@+id/cover_layer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/monitor_picture"
-            android:layout_alignEnd="@+id/monitor_picture"
-            android:layout_alignStart="@+id/monitor_picture"
-            android:layout_alignTop="@+id/monitor_picture"
-            android:alpha="0.4"
-            android:background="@color/color_black" />
 
         <com.cylan.jiafeigou.widget.crop.EffectLayout
             android:id="@+id/effect_view"
             android:layout_width="@dimen/y206"
             android:layout_height="@dimen/y136"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:minHeight="@dimen/y80"
             android:minWidth="@dimen/y80"
             android:visibility="invisible">
@@ -55,20 +63,39 @@
                 android:textSize="@dimen/sp15" />
         </com.cylan.jiafeigou.widget.crop.EffectLayout>
 
-        <com.cylan.jiafeigou.widget.SimpleProgressBar
-            android:id="@+id/load_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:padding="@dimen/x5"
-            android:visibility="gone"
-            app:progress_init_loading="false"
-            app:progress_point_radius="@dimen/x2"
-            app:progress_radius="@dimen/x20"
-            app:progress_stroke_color="@color/color_white"
-            app:progress_swipe_degree="310" />
-
     </com.cylan.jiafeigou.widget.crop.CropLayout>
+
+    <com.cylan.jiafeigou.widget.SimpleProgressBar
+        android:id="@+id/load_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:padding="@dimen/x5"
+        android:visibility="visible"
+        app:progress_point_radius="@dimen/y2"
+        app:progress_radius="@dimen/y20"
+        app:progress_stroke_color="@color/color_white"
+        app:progress_swipe_degree="310" />
+
+    <TextView
+        android:id="@+id/drag_and_drop"
+        android:layout_width="@dimen/y176"
+        android:layout_height="@dimen/y176"
+        android:layout_centerInParent="true"
+        android:alpha="0.6"
+        android:background="#000000"
+        android:clickable="true"
+        android:drawableTop="@drawable/icon_drag_and_drop"
+        android:focusable="true"
+        android:gravity="center_horizontal|bottom"
+        android:paddingBottom="@dimen/y42"
+        android:paddingEnd="@dimen/y7"
+        android:paddingStart="@dimen/y7"
+        android:paddingTop="@dimen/y40"
+        android:text="@string/DETECTION_AREA_ADD"
+        android:textColor="@color/color_white"
+        android:textSize="@dimen/sp16"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/back"
@@ -93,11 +120,26 @@
         android:layout_marginEnd="@dimen/y8"
         android:layout_marginTop="@dimen/y8"
         android:clickable="true"
+        android:enabled="false"
         android:focusable="true"
         android:padding="@dimen/y10"
         android:text="@string/FINISHED"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/normal_btn_color_selector"
         android:textSize="@dimen/sp15" />
+
+    <TextView
+        android:id="@+id/pop_tips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/monitor_toggle"
+        android:layout_alignEnd="@+id/monitor_toggle"
+        android:background="@drawable/collect_tips"
+        android:drawableStart="@drawable/tips_close"
+        android:gravity="center_vertical"
+        android:text="@string/FINISHED"
+        android:textColor="@color/normal_btn_color_selector"
+        android:textSize="@dimen/sp13"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/monitor_toggle"
@@ -108,6 +150,6 @@
         android:layout_marginBottom="@dimen/y20"
         android:layout_marginEnd="@dimen/y20"
         android:background="@drawable/icon_default_area"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </RelativeLayout>
