--- a/app/src/main/res/layout/layout_motion_shaper.xml
+++ b/app/src/main/res/layout/layout_motion_shaper.xml
@@ -12,9 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="@dimen/y20"
+        android:layout_marginEnd="@dimen/y20"
+        android:layout_marginStart="@dimen/y20"
         android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="4"
         android:text="@string/DETECTION_AREA_GUIDE"
         android:textColor="@color/color_white"
         android:textSize="@dimen/sp15" />
