--- a/app/src/main/res/layout/fragment_select_cid.xml
+++ b/app/src/main/res/layout/fragment_select_cid.xml
@@ -1,22 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_red">
+    android:background="@color/color_white"
+    android:clickable="true"
+    android:focusable="true"
+    android:keepScreenOn="true"
+    android:orientation="vertical">
+
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:ct_icon="@drawable/nav_icon_back_gary" />
 
     <TextView
-        android:id="@+id/result"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="@dimen/y48"
+        android:gravity="center"
+        android:text="@string/WIRED_SELECT_DEVICE_CID"
+        android:textColor="@color/color_333333"
+        android:textSize="@dimen/sp26" />
 
-    <Button
-        android:id="@+id/next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="500dp"
-        android:text="下一步"
-        app:layout_constraintBottom_toBottomOf="parent" />
+    <TextView
+        android:id="@+id/device_cid"
+        style="@style/ripple_background"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y48"
+        android:layout_marginEnd="@dimen/y20"
+        android:layout_marginStart="@dimen/y20"
+        android:layout_marginTop="@dimen/y50"
+        android:drawableEnd="@drawable/add_icon_drop_down"
+        android:ellipsize="end"
+        android:enabled="false"
+        android:gravity="center"
+        android:text="@string/WIRED_SELECT_DEVICE_CID_TIPS"
+        android:textColor="@color/color_normal_text_selector"
+        android:textSize="@dimen/sp15" />
 
-</android.support.constraint.ConstraintLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y1"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="@dimen/x20"
+        android:layout_marginRight="@dimen/x20"
+        android:background="@color/color_f2f2f2" />
+
+    <com.cylan.jiafeigou.widget.LoginButton
+        android:id="@+id/next_step"
+        android:layout_width="@dimen/x173"
+        android:layout_height="@dimen/y50"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/y37"
+        android:gravity="center"
+        android:text="@string/NEXT"
+        android:textColor="@color/color_4b9fd5"
+        android:textSize="@dimen/sp17"
+        app:lb_stroke_color="@color/color_d8d8d8" />
+
+</LinearLayout>
