--- a/app/src/main/res/layout/fragment_submit_binding_info.xml
+++ b/app/src/main/res/layout/fragment_submit_binding_info.xml
@@ -85,6 +85,7 @@
 
 
             <TextView
+                android:id="@+id/tv_bind_failed_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/btn_bind_failed_repeat"
