--- a/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
+++ b/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
@@ -1,26 +1,67 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cLayout_dialog_wifi_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/color_white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/y265"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/list_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/x24"
+            android:layout_margin="@dimen/y24"
             android:text="@string/choose_connect_wifi"
             android:textColor="@color/color_black"
-            android:textSize="@dimen/sp16" />
+            android:textSize="@dimen/sp16"
+            app:layout_constraintBottom_toTopOf="@+id/rv_wifi_list"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ViewSwitcher
+            android:id="@+id/refresh_switcher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y10"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/list_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/list_title">
+
+            <ImageView
+                android:id="@+id/refresh"
+                android:layout_width="@dimen/y30"
+                android:layout_height="@dimen/y30"
+                android:layout_gravity="center"
+                android:src="@drawable/choose_icon_refresh" />
+
+            <com.cylan.jiafeigou.widget.SimpleProgressBar
+                android:id="@+id/load_bar"
+                android:layout_width="@dimen/y30"
+                android:layout_height="@dimen/y30"
+                android:layout_gravity="center"
+                android:padding="@dimen/y8"
+                app:progress_init_loading="true"
+                app:progress_point_radius="@dimen/y2"
+                app:progress_radius="@dimen/y7"
+                app:progress_stroke_color="#d9d9d9"
+                app:progress_stroke_width="@dimen/y2"
+                app:progress_swipe_degree="310" />
+        </ViewSwitcher>
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_wifi_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/list_title" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
